# Youtube-Downloader

./: .gitignore  LICENSE  README.md  build.bat  build.sh  pyproject.toml  requirements.txt  setup.bat  setup.sh  ytdl-windows.spec  ytdl.py
.claude/: settings.local.json
.github/workflows/: release.yml
